--- a/style.css
+++ b/style.css
@@ -2,10 +2,9 @@ body{
     header{ 
         background-color: peachpuff;
         padding: 10px 20px;
-        margin: -1%;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-around;
 
         img{
             width: 102px;
@@ -15,6 +14,7 @@ body{
         .nav-links{ 
             display: flex;
             gap: 50px; /* Espacio entre los textos, ajustable */
+            padding-left: 10px;
         }
 
         .nav-links a{
@@ -33,5 +33,61 @@ body{
         } 
 
     }
+
+main{
+        
+    .div-imagen{
+        display: flex;
+        flex-wrap: wrap; /*reacomoda cuando achico la pantalla*/
+        justify-content: center;
+        }
+            
+    .imagen{
+            width: 435px;
+            height: 250px;
+            padding: 5px;
+            transition: transform 0.2s ease;
+            }
+    .imagen:hover{
+            transform: scale(1.1);
+        }
+}
+
+footer {
+    background-color: #f0f0f0;
+    bottom: 0;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    bottom: 0;
+    width: 100%;
+    margin-top: auto;
+
+    .SocialMedia {
+        display: flex;
+        justify-content: center;
+        gap: 40px;
+        margin-bottom: 15px;
+        margin-top: 15px;
+    }
+
+    .social-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .social-item i {
+        font-size: 24px;
+        color: #f06969;
+        margin-bottom: 5px;
+    }
+
+    .social-item p {
+        margin: 0;
+        font-size: 14px;
+        color: #333;
+    }
+
+}
 }
 
