--- a/style.css
+++ b/style.css
@@ -1,55 +1,68 @@
-body{
-    header{ 
-        background-color: peachpuff;
-        padding: 10px 20px;
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+header{ 
+    background-color: peachpuff;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    img{
+        width: 102px;
+        margin: 0%;
+        }
+    .nav-links{ 
         display: flex;
-        align-items: center;
-        justify-content: space-around;
-
-        img{
-            width: 102px;
-            margin: 0%;
-            
-        }
-        .nav-links{ 
-            display: flex;
-            gap: 50px; /* Espacio entre los textos, ajustable */
-            padding-left: 10px;
+        gap: 50px; /* Espacio entre los textos, ajustable */
+        padding-left: 10px;
         }
 
-        .nav-links a{
-            font-family: Indie Flower;
-            font-size: 1.8rem;
-            color: #eb7d25;
-            margin-left: 20px;
-            font-weight: bold;
-            text-decoration: none;
-            cursor: pointer;
-            
-        }
-        .nav-links a:hover{ /*paso por encima cambia de color*/
-            color:blueviolet;
-            /*background-color: y aca el color o hex; -- esto es para que aparezca un recuadrode ese color al pasar el mouse*/
-        } 
-
+    .nav-links a{
+        font-family: Indie Flower;
+        font-size: 1.8rem;
+        color: #eb7d25;
+        margin-left: 20px;
+        font-weight: bold;
+        text-decoration: none;
+        cursor: pointer;
     }
+    .nav-links a:hover{ /*paso por encima cambia de color*/
+        color:blueviolet; /*background-color: y aca el color o hex; -- esto es para que aparezca un recuadrode ese color al pasar el mouse*/
+    } 
+
+}
 
 main{
-        
     .div-imagen{
-        display: flex;
-        flex-wrap: wrap; /*reacomoda cuando achico la pantalla*/
-        justify-content: center;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); /*con autofit al achicar la pantalla mantengo el diseño de "celdas" a pesar que achique o agrande la pantalla*/
+        text-align: center;
+        gap: 10px;
+        padding: 10px;
+        justify-items: center;
         }
-            
+        
     .imagen{
-            width: 435px;
-            height: 250px;
-            padding: 5px;
-            transition: transform 0.2s ease;
+        display: flex;
+        width: 435px;
+        height: 250px;
+        padding: 5px;
+        transition: transform 0.2s ease;
             }
     .imagen:hover{
-            transform: scale(1.1);
+        transform: scale(1.1);
+        }
+
+    .text{
+        font-family: Indie Flower;
+        font-weight: bold;
+        font-size: 1.1rem;
+        color: #df8484;
+        margin-top: 10px;
         }
 }
 
@@ -61,7 +74,7 @@ footer {
     bottom: 0;
     width: 100%;
     margin-top: auto;
-
+}
     .SocialMedia {
         display: flex;
         justify-content: center;
@@ -87,7 +100,11 @@ footer {
         font-size: 14px;
         color: #333;
     }
+    p{
+        font-family:Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 0.7rem;
+    }
 
-}
-}
+
+
 
