--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 html, body {
     height: 100%;
     margin: 0;
-    display: flex;
+    display:flex;
     flex-direction: column;
 }
+.grid {
+    display:grid;
+    grid-template-areas: "header" "main" "footer";
+    grid-template-rows: auto 1fr auto;
+    min-height: 100vh; /*altura de la pantalla*/
+    }
 header{ 
     background-color: peachpuff;
     padding: 10px 20px;
@@ -17,13 +23,13 @@ header{
         }
     .nav-links{ 
         display: flex;
-        gap: 50px; /* Espacio entre los textos, ajustable */
+        gap: 10px; /* Espacio entre los textos */
         padding-left: 10px;
         }
 
     .nav-links a{
         font-family: Indie Flower;
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         color: #eb7d25;
         margin-left: 20px;
         font-weight: bold;
@@ -39,18 +45,18 @@ header{
 main{
     .div-imagen{
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); /*con autofit al achicar la pantalla mantengo el diseño de "celdas" a pesar que achique o agrande la pantalla*/
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); /*con autofit mantengo el diseño aunque achique o agrande la pantalla*/
         text-align: center;
-        gap: 10px;
+        gap: 1px;
         padding: 10px;
         justify-items: center;
         }
         
     .imagen{
         display: flex;
-        width: 435px;
+        width: 410px;
         height: 250px;
-        padding: 5px;
+        padding: 4px;
         transition: transform 0.2s ease;
             }
     .imagen:hover{
@@ -63,17 +69,19 @@ main{
         font-size: 1.1rem;
         color: #df8484;
         margin-top: 10px;
+        /*transition-duration: 10s;*/
         }
+    /*.text:hover{
+        transform: rotate(11.1rem);
+    }*/
 }
 
 footer {
     background-color: #f0f0f0;
-    bottom: 0;
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    bottom: 0;
     width: 100%;
-    margin-top: auto;
+    grid-area: footer;
 }
     .SocialMedia {
         display: flex;
@@ -105,6 +113,28 @@ footer {
         font-size: 0.7rem;
     }
 
+@media (max-width: 768px) {
+    .div-imagen {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        padding: 5px;
+    }
 
-
-
+    header {
+        flex-direction: row; 
+        align-items: center;
+        justify-content: space-between; 
+        padding: 10px;
+        }
+        
+        .nav-links {
+        gap: 10px; 
+        }
+        
+        .nav-links a {
+            font-size: 1.2rem; 
+        }
+        
+        img {
+            width: 80px; 
+        }
+    }
