--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@ html, body {
 .fondo{
     background-image:url(images/background.jpg);
     background-size: 100%;
-    position: relative;
+    /*position: relative;*/
+    background-attachment: fixed;
+
 
 }
 
@@ -122,12 +124,12 @@ footer {
 
     .social-item p {
         margin: 0;
-        font-size: 14px;
+        font-size: 0.5rem;
         color: #333;
     }
     p{
         font-family:Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 0.7rem;
+        font-size: 0.5rem;
     }
 
 @media (max-width: 768px) {
