--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body {
 }    
 .fondo{
     background-image:url(images/background.jpg);
-    background-size: 100%;
+    background-size: cover;
     /*position: relative;*/
     background-attachment: fixed;
 
